--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,6 +1,25 @@
-body { background-color:black;
-
+* {margin:0;padding:0;box-sizing:border-box;}
+body {
+    color:#333;
+    font-size:16px;
+    font-family:times, georgia, serif;
+    line-height:1.3;
 }
-h1,h2,h3,p,li { color:white;
-
+section {
+    padding:5em 0;
+}
+h1, h2 {
+    font-family:helvetica, arial, sans-serif;
+}
+ul {
+    padding-left:1.25em;
+}
+#intro {
+    background:url(../images/Sunset_Rockies.jpg);
+    background-size:cover;
+    background-repeat:no-repeat;
+    font-size: 2em;
+    padding: 5em 0 0 5em;
+    height: 60vh;
+    color: #fff;
 }
