--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -24,6 +24,7 @@ section {
 
 
 
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 h1, h2 {
 
     font-family: 'Oswald', sans-serif;
