--- a/unit_5/style.css
+++ b/unit_5/style.css
@@ -1,5 +1,3 @@
-
-@import url('https://fonts.googleapis.com/css?family=Oswald');
 * {margin:0;padding:0;box-sizing:border-box;}
 
 
@@ -8,8 +6,6 @@ body {
     color:#333;
 
     font-size:20px;
-
-    font-weight:400px;
 
     font-family: georgia, serif;
 
@@ -27,10 +23,12 @@ section {
 
 
 
-
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 h1, h2 {
 
     font-family: 'Oswald', sans-serif;
+
+    font-weight: 400px;
 
 }
 
@@ -46,3 +44,15 @@ ul {
     background:url(../images/Sunset_Rockies.jpg);
 
     background-size:cover;
+
+    background-repeat:no-repeat;
+
+    font-size: 2em;
+
+    padding: 5em 0 0 5em;
+
+    height: 60vh;
+
+    color: #fff;
+
+}
