--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -5,11 +5,8 @@
 body {
 
     color:#333;
-
     font-size:20px;
-
     font-family: georgia, serif;
-
     line-height:1.3;
 
 }
@@ -17,12 +14,9 @@ body {
 section {
 
     padding:5em 0;
-
+    background-color: #FFE2B8;
+    border: 1px black solid;
 }
-
-
-
-
 
 
 h1, h2 {
@@ -37,21 +31,26 @@ ul {
 
 }
 
-
 #intro {
 
     background:url(../images/Sunset_Rockies.jpg);
-
     background-size:cover;
-
     background-repeat:no-repeat;
-
     font-size: 2em;
-
     padding: 5em 0 0 5em;
-
     height: 60vh;
-
     color: #fff;
+    border: 1px black solid
+}
 
+nav {
+    background-color: #E8C66A;
+    border: 1px black solid;
+    padding: 20px; 
+}
+
+header {
+    background-color: #FFED74;
+    border: 1px black solid;
+    padding: 20px;
 }
