--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -60,12 +60,21 @@ section#about {
 }
 p.main{
     float: left;
-    width: 50em;
+    width: 30%;
 }
 p.approach{
     float: right;
-    width: 50em;
+    width: 30%;
 
+}
+
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
 }
 
 input[type=text], select, textarea {
