--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -10,6 +10,13 @@ body {
     line-height:1.3;
 
 }
+header {
+    background-color: #8FBC8F;
+}
+nav {
+    
+    background-color: #333333;
+}
 
 section {
     padding:5em 0;
@@ -30,7 +37,7 @@ ul {
 
 #intro {
 
-    background:url(../images/Sunset_Rockies.jpg);
+    background:url(../images/denver_capital.jpg);
     background-size:cover;
     background-repeat:no-repeat;
     font-size: 2em;
@@ -94,7 +101,7 @@ input[type=submit]:hover {
 
 .container {
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #8FBC8F;
     padding: 20px;
 }
 
