--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -13,9 +13,17 @@ body {
 header {
     background-color: #8FBC8F;
 }
+header img {
+    width: 5em;
+}
 nav {
-    
     background-color: #333333;
+}
+nav a {
+    color:#fff;
+    display:inline-block;
+    padding:1em;
+    text-decoration:none;
 }
 
 section {
@@ -23,11 +31,7 @@ section {
 }
 
 
-h1, h2 {
-
-    font-family: 'Oswald', sans-serif;
-    font-weight: 400px;
-}
+h1, h2 {font-family: 'Oswald', sans-serif;font-weight: 400;}
 
 ul {
 
@@ -35,16 +39,7 @@ ul {
 
 }
 
-#intro {
-
-    background:url(../images/denver_capital.jpg);
-    background-size:cover;
-    background-repeat:no-repeat;
-    font-size: 2em;
-    padding: 5em 0 0 5em;
-    height: 60vh;
-    color: #fff;
-}
+#intro {background:url(../images/denver_capital.jpg);background-size:cover;background-repeat:no-repeat;font-size: 2em;padding: 2em 0 0 3em;height: 55vh;color: #fff;}
 
 #sales {
     background: #333333;
@@ -52,7 +47,7 @@ ul {
 }
 
 #sales p {
-    width: 600px;
+    max-width: 600px;
     margin: auto;
     font-size: 1.5em;
 }
@@ -61,18 +56,28 @@ ul {
     margin-top: 1em;
 }
 
-section#about {
-    width: 70em;
+#about {
+    max-width: 80em;
     margin: auto;
 }
-p.main{
-    float: left;
-    width: 30%;
+#services {
+    max-width: 40em;
+    margin: auto;
 }
-p.approach{
-    float: right;
-    width: 30%;
-
+#services img {
+    float:left;
+    padding:1em;
+    width:33.33%;
+}
+#contact {
+    max-width:40em;
+    margin:auto;
+}
+.main{
+    float: left;
+    width: 50%;
+    margin: 0;
+    padding: 0 2em;
 }
 
 .clearfix:after {
@@ -94,14 +99,39 @@ input[type=text], select, textarea {
     margin-bottom: 16px; 
     resize: vertical 
 }
-
 input[type=submit]:hover {
     background-color: #45a049;
 }
-
 .container {
     border-radius: 5px;
     background-color: #8FBC8F;
     padding: 20px;
 }
-
+.cta {
+    background:purple;
+    color:#fff;
+    display:inline-block;
+    margin-top:.5em;
+    padding: 1em 2em;
+    text-decoration:none;
+    border: none;
+    border-radius: 4px;
+}
+#intro .cta {
+    font-size:.5em;
+}
+@media only screen and (max-width:1090px) {
+    body {
+        font-size:16px;
+    }
+}
+@media only screen and ( max-width:40em) {
+    #contact, #services, #about, #sales {
+        padding:5em 2em;
+    }
+    .main {
+        margin-top:1em;
+        padding:0;
+        width:100%;
+    }
+}
