--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -130,7 +130,7 @@ input[type=submit]:hover {
         padding:5em 2em;
     }
     .main {
-        margin-top:1em;
+        margin-top:.5em;
         padding:0;
         width:100%;
     }
