--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -141,7 +141,7 @@ input[type=submit]:hover {
         width:100%;
     }
 }
-@media only screen and (min-width:600px) {
+@media only screen and (max-width:400px) {
     #intro {
         background-color: purple;
         background-image: none;
