--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -83,7 +83,7 @@ ul {
 .approach{
     float: right;
     width: 50%;
-    margin 0;
+    margin: 0;
     padding:  0 2em;
 }
 .clearfix:after {
@@ -138,7 +138,7 @@ input[type=submit]:hover {
     .main {
         margin-top:2em;
         padding:0;
-        width:100%;
+        width:50%;
     }
 }
 @media only screen and (max-width:600px) {
