--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -138,7 +138,12 @@ input[type=submit]:hover {
     .main {
         margin-top:2em;
         padding:0;
-        width:50%;
+        width:100%;
+    }
+    .approach {
+        margin-top:2em;
+        padding:0;
+        width:100%;
     }
 }
 @media only screen and (max-width:600px) {
